--- a/frontend/src/html.html
+++ b/frontend/src/html.html
@@ -2,84 +2,34 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ripple em Input</title>
-    <style>
-      body {
-        background-color: #222;
-        color: white;
-        font-family: Arial, sans-serif;
-        display: flex;
-        gap: 20px;
-        padding: 40px;
-      }
-
-      .ripple-container {
-        position: relative;
-        display: inline-block;
-        overflow: hidden;
-        border: 1px solid white;
-        border-radius: 5px;
-        padding: 5px;
-        background-color: #333;
-      }
-
-      .ripple-container input {
-        background: transparent;
-        color: white;
-        border: none;
-        outline: none;
-        padding: 10px;
-      }
-
-      .ripple {
-        position: absolute;
-        border-radius: 50%;
-        background-color: rgba(255, 255, 255, 0.4);
-        transform: scale(0);
-        animation: ripple-animation 0.6s linear;
-        pointer-events: none;
-      }
-
-      @keyframes ripple-animation {
-        to {
-          transform: scale(4);
-          opacity: 0;
-        }
-      }
-    </style>
+    <title>Exemplo Radio</title>
   </head>
   <body>
-    <div class="ripple-container" onclick="aplicarRipple(event)">
-      <input type="date" />
-    </div>
+    <h3>Escolha um documento:</h3>
 
-    <div class="ripple-container" onclick="aplicarRipple(event)">
-      <input type="time" />
-    </div>
+    <input type="radio" id="cpf" name="documento" value="CPF" checked />
+    <label for="cpf">CPF</label>
+
+    <input type="radio" id="rg" name="documento" value="RG" />
+    <label for="rg">RG</label>
+
+    <input type="radio" id="cnh" name="documento" value="CNH" />
+    <label for="cnh">CNH</label>
+
+    <br /><br />
+
+    <label id="labelDocumento" for="inputDocumento">CPF -</label>
+    <input type="text" id="inputDocumento" />
 
     <script>
-      function aplicarRipple(e) {
-        const container = e.currentTarget;
+      const radios = document.querySelectorAll('input[name="documento"]');
+      const labelDocumento = document.getElementById("labelDocumento");
 
-        const ripple = document.createElement("span");
-        ripple.className = "ripple";
-
-        const rect = container.getBoundingClientRect();
-        const size = Math.max(rect.width, rect.height);
-        ripple.style.width = ripple.style.height = size + "px";
-
-        const x = e.clientX - rect.left - size / 2;
-        const y = e.clientY - rect.top - size / 2;
-        ripple.style.left = `${x}px`;
-        ripple.style.top = `${y}px`;
-
-        container.appendChild(ripple);
-
-        ripple.addEventListener("animationend", () => {
-          ripple.remove();
+      radios.forEach((radio) => {
+        radio.addEventListener("change", () => {
+          labelDocumento.textContent = `${radio.value} -`;
         });
-      }
+      });
     </script>
   </body>
 </html>
